# hyprmakki

./: .vimrc  .zshrc  background  install.sh
.config/: gigachad.txt  starship.toml
.config/fastfetch/ascii/: macintosh.txt
.config/fcitx5/: config  profile
.config/fcitx5/conf/: classicui.conf  keyboard.conf
.config/ghostty/: config
.config/hypr/: hypridle.conf  hyprland.conf  hyprlock.conf  hyprpaper.conf
.config/kitty/: kitty.conf  kitty.conf.bak
.config/mako/: config
.config/rofi/: config.rasi  launchpad.rasi
.config/snappy-switcher/: config.ini
.config/waybar/: config  style.css
.vim/: .netrwhist
Devel/PyProj/snapper-TUI/: .gitignore  pyproject.toml  run_snapper_tui.py  snapper-tui.spec
Devel/PyProj/snapper-TUI/snapper_tui/: __init__.py  __main__.py  app.py  data.py  styles.css  utils.py
fastfetch/: config.jsonc
fcitx5/: config
fcitx5/conf/: classicui.conf  clipboard.conf
hypr/: hyprland.conf  hyprlock.conf  hyprpaper.conf
kitty/: current-theme.conf  kitty.conf
silent/configs/: default.conf
waybar/: config  style.css
