[project]
name = "snapper-tui"
version = "0.1.0"
description = "An interactive Textual TUI for managing Snapper snapshots."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Snapper TUI Contributors" }]
dependencies = [
    "textual>=0.50",
]

[project.scripts]
snapper-tui = "snapper_tui.__main__:main"
